commit支持多个文件夹嵌套，结合Merkle tree实现